[tool.poetry]
name = "flask-tut"
version = "0.1.0"
description = "Official flask tutorial"
authors = ["patricknraanes <patrick.n.raanes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
numpy = "^1.22.2"
ipython = "^8.0.1"
ipdb = "^0.13.9"
pdbpp = "^0.10.3"
PySnooper = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
